# file_server

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/workflows/: ci.yml
FileServer/: CMakeLists.txt
FileServer/src/: main.cpp
config/: database.json  server.json
deploy/compose/: docker-compose.yml
deploy/docker/: Dockerfile
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  code-style.md  threat-model.md
docs/adr/: 0001-http-stack.md  0002-error-handling.md  0003-metadata-store.md
docs/design/: milestone-4-multipart-cleanup.md  milestone-6-distributed-mode.md
docs/runbooks/: README.md
examples/: CMakeLists.txt  README.md
examples/clients/: simple_client.cpp
include/nebulafs/auth/: jwks_cache.h  jwt_utils.h  jwt_verifier.h
include/nebulafs/core/: config.h  error.h  ids.h  logger.h  result.h  time.h
include/nebulafs/distributed/: http_client.h  placement_token.h
include/nebulafs/http/: http_server.h  request_context.h  route_registration.h  router.h
include/nebulafs/metadata/: metadata_backend.h  metadata_store.h  remote_metadata_store.h  sqlite_metadata_store.h
include/nebulafs/observability/: metrics.h
include/nebulafs/storage/: local_storage.h  remote_storage_backend.h  storage_backend.h
scripts/: backup.sh  build.sh  deploy.sh
src/: main.cpp  metadata_main.cpp  storage_node_main.cpp
src/auth/: jwks_cache.cpp  jwt_utils.cpp  jwt_verifier.cpp
src/core/: config.cpp  ids.cpp  logger.cpp  result.cpp  time.cpp
src/distributed/: http_client.cpp  placement_token.cpp
src/http/: http_server.cpp  route_registration.cpp  router.cpp
src/metadata/: remote_metadata_store.cpp  sqlite_metadata_store.cpp
src/observability/: metrics.cpp
src/storage/: local_storage.cpp  remote_storage_backend.cpp
tests/: CMakeLists.txt
tests/integration/: test_http_smoke.cpp
tests/unit/: test_config.cpp  test_jwt_verifier.cpp  test_metadata_store.cpp  test_path_safety.cpp
tools/dev-scripts/: build.sh
